# mcp-devops-on-prem

./: .gitignore  .mcpbignore  CHANGELOG.md  CLAUDE.md  README.md  manifest.json  pyproject.toml  requirements.txt  server.json  smithery.yaml
.github/workflows/: ci.yml  publish-smithery.yml  publish.yml
docs/: getting-started.md  index.md  robots.txt  sitemap.xml
src/mcp_devops/: __init__.py  server.py  shared.py
src/mcp_devops/tools/: __init__.py  pull_request_tools.py  repository_tools.py  search_tools.py  wiki_tools.py  work_item_tools.py
tests/: __init__.py  conftest.py  test_shared.py  test_smoke.py
tests/mocks/: pull_requests.py  repositories.py  wiki.py  work_items.py
tests/tools/: test_pull_request_tools.py  test_repository_tools.py  test_search_tools.py  test_wiki_tools.py  test_work_item_tools.py
