[project]
name = "mcp-devops-onpremise"
version = "0.1.0"
description = "MCP server for on-premises Azure DevOps — browse repositories, pull requests, work items, and wikis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "requests>=2.31.0",
    "requests-ntlm>=1.1.0",
]

[project.scripts]
mcp-devops-onpremise = "mcp_devops:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_devops"]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "R", "S"]
ignore = ["E203"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "isort>=5.12.0",
]
